2008-12-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-idna-to-ascii-rhs-1): Protect against local
	users' addresses that don't have domain parts.
	(message-idna-to-ascii-rhs): Use message-narrow-to-headers-or-head
	rather than message-narrow-to-head since there will be the message
	header separator.

2008-12-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnimap.el (nnimap-retrieve-headers-progress): Don't use nnimap-demule
	since the result is inserted in a unibyte buffer anyway.
	(nnimap-demule-use-string-to-multibyte): Remove.
	(nnimap-demule): Alias it to mm-string-to-multibyte.

2008-11-29  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnimap.el (nnimap-demule-use-string-to-multibyte): New temporary
	variable for debugging bug#464 and bug#1174.
	(nnimap-demule): Use it.

2008-11-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* message.el (message-send-mail): Just set the buffer to unibyte
	rather than use mm-with-unibyte-current-buffer which does a lot more.
	(message-send-mail-partially): Don't bother with
	mm-with-unibyte-current-buffer since it's already been made unibyte by
	message-send-mail.

2008-11-11  Teodor Zlatanov  <tzz@lifelogs.com>

	* nnrss.el (nnrss-make-hash-index): Debug message of full item.

2008-11-10  Teodor Zlatanov  <tzz@lifelogs.com>

	* netrc.el (netrc-parse): If a list is passed in as FILE, return it.

2008-11-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* starttls.el (starttls-any-program-available): Rewritten so it doesn't
	require itself and to remove `with-no-warnings'.

2008-11-03  Teodor Zlatanov  <tzz@lifelogs.com>

	* starttls.el (starttls-any-program-available): Get the name of the
	available TLS layer program.
	(starttls-open-steam-gnutls, starttls-open-stream): Put port number as
	well as the host name in the "opening" message.

	* auth-source.el (auth-source-cache, auth-source-do-cache)
	(auth-source-user-or-password): Cache passwords and logins by default,
	allow override with `auth-source-do-cache'.